Bug 93509 - Crash when close a LibODev if enable a While Typing/Autocorrect
Summary: Crash when close a LibODev if enable a While Typing/Autocorrect
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
5.0.3.1 rc
Hardware: x86-64 (AMD64) All
: high critical
Assignee: Stephan Bergmann
URL:
Whiteboard: target:5.1.0 target:5.0.4
Keywords:
Depends on:
Blocks:
 
Reported: 2015-08-18 12:16 UTC by baffclan
Modified: 2016-10-25 19:20 UTC (History)
6 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description baffclan 2015-08-18 12:16:55 UTC
Steps to Reproduce:
1. Open New Writer
2. Tools -> AutoCorrect ->
3. enable a While Typing
4. Exit LibODev
5. Appear Document Recovery Dialog

Windows 7 Pro(x64)
Version: 5.1.0.0.alpha1+ (x64)
Build ID: 181a7b27acf29a2728be5a0eb3696796bc7df3da
TinderBox: Win-x86_64@62-TDF, Branch:MASTER, Time: 2015-08-17_23:57:39
Locale: ja-JP (ja_JP)
Comment 1 tommy27 2015-08-18 13:43:14 UTC
I don't reproduce this under Win8.1 x64 using LibO 5.1.0.0.alpha1+
Build ID: 7d3fa6bae9f7a755eb2d0ca24bf1afd5f3646bb7
TinderBox: Win-x86@39, Branch:master, Time: 2015-08-09_08:38:08
Locale: it-IT (it_IT)
Comment 2 Buovjaga 2015-09-09 13:11:45 UTC
Repro.

Win 7 Pro 64-bit Version: 5.1.0.0.alpha1+
Build ID: b3de73f32af6276a60f5678861c461631a75e743
TinderBox: Win-x86@39, Branch:master, Time: 2015-09-01_06:18:16
Locale: en-US (fi_FI)
Comment 3 Jean-Baptiste Faure 2015-10-27 17:55:34 UTC
I have the same problem but with step 3: disable while typing.
Indeed Autocorrection seems to be enabled by default.
Same problem on LO 5.0.4.0+

Please, confirm that the bug description is about enabling autocorrection while typing.

Best regards. JBF
Comment 4 baffclan 2015-10-28 09:27:22 UTC
(In reply to Jean-Baptiste Faure from comment #3)
> I have the same problem but with step 3: disable while typing.
> Indeed Autocorrection seems to be enabled by default.
Yes, Autocorrection is enabled by default.

I test New Profile.

Steps to Reproduce for New Profile:
1. Open New Writer
2. Tools -> AutoCorrect ->
3. disable a While Typing
4. Exit LibODev
5. Appear Document Recovery Dialog
Comment 5 Jean-Baptiste Faure 2015-10-28 13:34:56 UTC
(In reply to baffclan from comment #4)
> (In reply to Jean-Baptiste Faure from comment #3)
> > I have the same problem but with step 3: disable while typing.
> > Indeed Autocorrection seems to be enabled by default.
> Yes, Autocorrection is enabled by default.
> 
> I test New Profile.
> 
> Steps to Reproduce for New Profile:
> 1. Open New Writer
> 2. Tools -> AutoCorrect ->
> 3. disable a While Typing
> 4. Exit LibODev
> 5. Appear Document Recovery Dialog

Thank you. Set back to NEW.

Best regards. JBF
Comment 6 Commit Notification 2015-10-29 06:46:49 UTC
Oliver Specht committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=4aab13f77e5dc218d067ca7efe3622f4ea780bf9

tdf#93509: crash on storing auto correction config fixed

It will be available in 5.1.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Jean-Baptiste Faure 2015-10-29 08:18:06 UTC
Forgot to change the version number (see comment #3). In version 5.0, AutoCorrect entry is in Format menu.

Any plan to backport the fix to 5.0 ?

Best regards. JBF
Comment 8 Jean-Baptiste Faure 2015-10-29 08:20:07 UTC
I reproduce the bug under Ubuntu -> changed OS to all.

Best regards. JBF
Comment 9 Commit Notification 2015-10-29 16:55:31 UTC
Stephan Bergmann committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=fc7df6f9a6caf975867f4fcb87b5b0c86ed1ee84

tdf#93509: Commit at the right time

It will be available in 5.1.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 10 Stephan Bergmann 2015-10-29 17:10:23 UTC
(In reply to Commit Notification from comment #9)
> Stephan Bergmann committed a patch related to this issue.
> It has been pushed to "master":
> 
> http://cgit.freedesktop.org/libreoffice/core/commit/
> ?id=fc7df6f9a6caf975867f4fcb87b5b0c86ed1ee84
> 
> tdf#93509: Commit at the right time

(Requested backport to libreoffice-5-0 at <https://gerrit.libreoffice.org/#/c/19673/>.)
Comment 11 Stephan Bergmann 2015-10-30 09:00:35 UTC
(In reply to Jean-Baptiste Faure from comment #7)
> Forgot to change the version number (see comment #3). In version 5.0,
> AutoCorrect entry is in Format menu.

How reliable is "Version (earliest affected)" being 5.0.3.1 rc?  Is this really a regression from 5.0.2 to 5.0.3?
Comment 12 Buovjaga 2015-10-30 09:08:43 UTC
(In reply to Stephan Bergmann from comment #11)
> (In reply to Jean-Baptiste Faure from comment #7)
> > Forgot to change the version number (see comment #3). In version 5.0,
> > AutoCorrect entry is in Format menu.
> 
> How reliable is "Version (earliest affected)" being 5.0.3.1 rc?  Is this
> really a regression from 5.0.2 to 5.0.3?

Unable to locate such a global option in 5.0.2.

Win 7 Pro 64-bit, Version: 5.0.2.2 (x64)
Build ID: 37b43f919e4de5eeaca9b9755ed688758a8251fe
Locale: fi-FI (fi_FI)
Comment 13 Stephan Bergmann 2015-10-30 09:22:32 UTC
(In reply to Beluga from comment #12)
> Unable to locate such a global option in 5.0.2.

"In version 5.0, AutoCorrect entry is in Format menu." according to comment 7.

And, just testing right now, I'm indeed able to reproduce this issue even with Fedora 22's LO 4.4.5, so this is apparently no recent regression, so IMO fine to only fix it for libreoffice-5-0 towards LO 5.0.4, and not force it also into libreoffice-5-0-3 at the last minute.
Comment 14 Commit Notification 2015-10-30 11:22:48 UTC
Stephan Bergmann committed a patch related to this issue.
It has been pushed to "libreoffice-5-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=61693775969fb7c8bfadfae72405225411ce79ea&h=libreoffice-5-0

tdf#93509: Commit at the right time

It will be available in 5.0.4.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 15 baffclan 2015-10-30 12:06:12 UTC
Thanks for fixing this!
Cannot Reproduce with newest master.

Version: 5.1.0.0.alpha1+ (x64)
Build ID: efbde08e2a9930edb4637824d9d3a768873314a8
TinderBox: Win-x86_64@62-TDF, Branch:MASTER, Time: 2015-10-29_23:09:26
Locale: ja-JP (ja_JP)