tdf#93509: crash on storing auto correction config fixed

fix of tdf#86494 removed the pAutoCorrect which is required to store the config
committing the config before fixes the crash

Change-Id: If049d5ad1e62711d4ec66ec6cca15940f7edba90